force-app/main/default/objects/Hotel__c/fields/Ex_1__c.field-meta.xml
<CustomField>
    <fullName>Ex_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ex 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>