force-app/main/default/objects/Hotel__c/fields/Ex_2__c.field-meta.xml
<CustomField>
    <fullName>Ex_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Ex 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>