force-app/main/default/objects/Hotel__c/fields/House__c.field-meta.xml
<CustomField>
    <fullName>House__c</fullName>
    <label>House</label>
    <referenceTo>House__c</referenceTo>
    <relationshipLabel>Hotels</relationshipLabel>
    <relationshipName>Hotels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>