force-app/main/default/objects/Hotel__c/fields/States__c.field-meta.xml
<CustomField>
    <fullName>States__c</fullName>
    <label>States</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>India</valueSetName>
    </valueSet>
</CustomField>